--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
  <!-- Principal -->
  <div data-role="page" id="principal" >   
   <div data-role="header">
+ 
     <h1>Juego....</h1>
   </div>
 
   <div data-role="main" class="ui-content" align="center">
+   <div id="jugador"> Jugador </div>
    <a href="#pagina2"  id="btnjugar" data-transition="flip" class="ui-btn ui-icon-check ui-btn-icon-right ui-shadow ui-corner-all ui-btn-inline">Jugar</a>
 </div>
 
