--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
 
   <div data-role="footer" data-position="fixed">
-  <H3> <div  id="pantalla" >Pulso </div> </H3>
+  <H3> <div  id="pantalla" >Pulso: </div> </H3>
   </div>
  </div>  
  <!-- Pagina2 -->
