--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
    </div>
 
  <div data-role="main" class="ui-content" align="center">
- <div id="txtnombre"> </div>
+ <input type="text" id="txtnombre"> 
     <a href="#guardar"  id="btnguardar" data-transition="flip"  class="ui-btn ui-icon-check ui-btn-icon-right ui-icon-user ui-shadow ui-corner-all ui-btn-inline">Guardar</a>
   
    
